# ARCCSSive

./: .gitignore  .travis.yml  README.md  alembic.ini  conftest.py  docker-compose.yml  import.pgloader  meta.py  pytest.ini  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: ISSUE_TEMPLATE.md
ARCCSSive/: CMIP5.py  __init__.py  cftable.py  cli.py  data.py  db.py  debug.py  meta.py  pkg_info.py  search.py
ARCCSSive/CMIP5/: DB.py  Model.py  ORM.py  Session.py  __init__.py  check_data.py  compare_helpers.py  insert.py  other_functions.py  other_functions2.py  pyesgf_functions.py  query.py  update_db_functions.py
alembic/: env.py
conda/: dev-environment.yml  meta.yaml
database_updates/: add_warning.py  update_db.py  upload_drstree.py  upload_tmptree.py
db/: 000_nci.sql  001_model.sql  001_raw.sql  002_model.sql  002_refresh.sql  003_sqlite.sql  004_cmip5.sql  010_refresh.sql  initdb.sh  metadata_sample.txt  paths_sample.txt
docs/: CMIP5.rst  Makefile  admin.rst  api.rst  conf.py  index.rst  make.bat  postgres.rst  using.md  using.rst  v2.rst
examples/: Rsqlite-example.r  SQLalchemy_operators.ipynb  add_warning.py  arccssive_example.ipynb  arccssive_openfile.py  arccssive_session.py  arccssive_training.ipynb  arccssive_training_dev.ipynb  check_ESGF.py  check_data.py  compare_ESGF.py  download_from_file.py  find_matching_variables.py  search_cmip5.py  search_replica.py  test2.py  upload_drstree.py  upload_tmptree.py  upload_tmptree2.py
tests/: test_ARCCSSive.py  test_CMIP5.py  test_cli.py  test_data.py  test_sqlite.py
(+38 files in other folders)
