[metadata]
name = ARCCSSive
author = Scott Wales
author-email = scott.wales@unimelb.edu.au
summary = ARCCSS Data Archive Tools
description-file = README.md
licence = Apache 2.0
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5

[files]
packages = 
    ARCCSSive
package-data =
    ARCCSSive = data/*

[pbr]
autodoc_tree_index_modules = True

[extras]
# Optional dependencies
dev = 
    pytest
    sphinx
    recommonmark
    mock

[build_sphinx]
source-dir = docs
build-dir = docs/_build

[tools.pytest]
addopts = --doctest-modules --ignore examples --ignore database_updates --doctest-glob='*.rst' --doctest-glob='*.md'
